--- a/ZulipApp/app/src/main/res/values/themes.xml
+++ b/ZulipApp/app/src/main/res/values/themes.xml
@@ -32,7 +32,7 @@
     </style>
 
     <!-- Bottom Sheet Dialog Style -->
-    <style name="CustomBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+    <style name="CustomBottomSheetDialogTheme" parent="Theme.Design.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/CustomBottomSheetStyle</item>
     </style>
 
