--- a/ZulipApp/app/src/main/res/layout/bottom_sheet_item.xml
+++ b/ZulipApp/app/src/main/res/layout/bottom_sheet_item.xml
@@ -7,4 +7,6 @@
     android:background="@android:color/transparent"
     android:textSize="@dimen/chat_bottom_emoji_text"
     android:textColor="@color/white"
-    android:gravity="center_horizontal"/>
+    android:gravity="center_horizontal"
+    android:layout_marginVertical="10dp"
+    android:layout_marginHorizontal="8dp"/>
