--- a/ZulipApp/app/src/main/res/layout/fragment_people.xml
+++ b/ZulipApp/app/src/main/res/layout/fragment_people.xml
@@ -53,11 +53,41 @@
         android:id="@+id/peopleProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/peopleSearchEditText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintVertical_bias="0"
         android:visibility="invisible"
         android:indeterminateTint="@color/people_progressbar" />
+
+    <TextView
+        android:id="@+id/peopleEmptySearchTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/people_empty_result_text"
+        android:textColor="@color/text_white"
+        android:text="@string/people_empty_result_text"
+        app:layout_constraintTop_toBottomOf="@id/peopleSearchEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/peopleEmptyListTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/people_empty_result_text"
+        android:textColor="@color/text_white"
+        android:text="@string/people_empty_list_text"
+        app:layout_constraintTop_toBottomOf="@id/peopleSearchEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
