--- a/ZulipApp/app/src/main/res/layout/fragment_profile.xml
+++ b/ZulipApp/app/src/main/res/layout/fragment_profile.xml
@@ -1,52 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_common_background">
 
-    <ImageView
-        android:id="@+id/profileAvatarImageView"
-        android:layout_width="@dimen/profile_avatar_width"
-        android:layout_height="@dimen/profile_avatar_height"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        android:contentDescription="@string/profile_avatar_description" />
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profileShimmer"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="20dp"
+            app:shimmer_auto_start="false">
 
-    <TextView
-        android:id="@+id/profileNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/profile_name_text"
-        android:textColor="@color/profile_name"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileAvatarImageView"
-        android:layout_marginTop="14dp" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/profileStatusTextVIew"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/profile_status_text"
-        android:textColor="@color/online"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileNameTextView"/>
+                        <ImageView
+                            android:id="@+id/profileAvatarImageView"
+                            android:layout_width="@dimen/profile_avatar_width"
+                            android:layout_height="@dimen/profile_avatar_height"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
 
-    <ProgressBar
-        android:id="@+id/profileProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"/>
+                            android:contentDescription="@string/profile_avatar_description" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                        <TextView
+                            android:id="@+id/profileNameTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/profile_name_text"
+                            android:textColor="@color/profile_name"
+                            android:gravity="center"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/profileAvatarImageView"
+                            android:layout_marginTop="14dp" />
+
+                        <TextView
+                            android:id="@+id/profileStatusTextVIew"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/profile_status_text"
+                            android:textColor="@color/online"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/profileNameTextView"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+</FrameLayout>
