--- a/ZulipApp/app/src/main/res/layout/fragment_chat.xml
+++ b/ZulipApp/app/src/main/res/layout/fragment_chat.xml
@@ -53,7 +53,7 @@
         android:id="@+id/chatButtonSend"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/send"
+        android:background="@drawable/baseline_add_circle"
         app:layout_constraintBottom_toBottomOf="@+id/chatEditText"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="12dp"
